fix: add z-index to switch forms button

--- a/src/components/molecules/SwitchForms/styles.module.scss
+++ b/src/components/molecules/SwitchForms/styles.module.scss
@@ -8,6 +8,8 @@
   border-width: 0;
   padding-left: 0;
   padding-right: 0;
+  position: relative;
+  z-index: get-index-level(lvl3);
   &:disabled {
     opacity: 0.5;
   }
